# GridOps

./: README.md  pyproject.toml
src/gridops/: __ini__.py  core.py
tests/: test_core.py
