[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GridOps"  # Match your actual project name
version = "0.1.0"
description = "Your GridOps library description"
authors = [{name = "Arthur Aguiar", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Add your actual library dependencies here
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
]

editor = [
    "python-lsp-server>=1.10.0",
    "jedi>=0.19.0",
]

# Tell hatchling where to find your source code
[tool.hatch.build.targets.wheel]
packages = ["src/gridops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe
    "PL",  # pylint
]
line-length = 88
target-version = "py38"
fix = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["gridops"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
